2001-05-25  Hans Breuer  <hans@breuer.org>

	* gdk_pixbuf.def : reflect Havoc's recent api change

Sun May 20 12:53:49 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (libgdk_pixbuf_1_3_la_LDFLAGS): Remove an
	excess $(GLIB_LIBS).

Sun May 13 11:59:11 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am: Make modules depend on libgdk_pixbuf.la.

2001-05-04  Havoc Pennington  <hp@redhat.com>

	* pixops/pixops.c (pixops_process): merge fix from stable: Patch
	 from hoshem@mel.comcen.com.au to fix nonzero X offsets.  Fixes
	 bug #50371.
	
        * gdk-pixbuf/pixops/pixops.c (pixops_composite_nearest): merge
	from stable: Patch from OKADA Mitsuru <m-okada@fjb.co.jp> to fix
	confusion of using "src" instead of "p".
        (pixops_composite_color_nearest): Use a more accurate (and
	correct, to begin with) compositing method.  This cures checks
	showing through on images with no alpha.

	* gdk-pixbuf.c (gdk_pixbuf_fill): fix bug that left some trailing
	bytes unfilled.

	* gdk-pixbuf-io.h: fix UpdatedNotifyFunc to use signed ints

	* gdk-pixbuf-loader.h (struct _GdkPixbufLoaderClass): Change
	area_updated signal to use signed ints.  Removed animation-related
	signals.

	* io-gif.c, io-gif-animation.h, io-gif-animation.c: Massive
	rewrite action

	* gdk-pixbuf-animation.c: Add GdkPixbufAnimationIter to abstract
	all the pesky details. Remove old frame-based API. Make
	GdkPixbufAnimation an abstract base class, derived by the loaders.

Sun Apr 22 15:51:32 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (LDADDS): Add $(MATH_LIB).

2001-04-18  Havoc Pennington  <hp@redhat.com>

	* gdk-pixbuf.c (gdk_pixbuf_fill): Function to fill pixbuf with a
	given color.

Wed Apr  4 01:41:02 2001  Tim Janik  <timj@gtk.org>

	* pixops/Makefile.am (noinst_LTLIBRARIES): include $top_srcdir
	so we don't try to get <gtk/gtkobject.h> from standard search
	paths.

	* Makefile.am (gdk-pixbuf-marshal.c): use deps from srcdir.
	add gdk-pixbuf-marshal.list to EXTRA_DIST.